# DEDS_Portfolio

./: README.md  pyproject.toml
DEDS-project/: DEDS_PROJ1_SDM (1).ipynb  Project.md
DSA/: DSA.py  LinkedList.py  LinkedListEmpty.py  LinkedListPopulated.py  LinkedList_Notebook FIX.ipynb  Opdracht2.py  Read.py  antwoorden.md
ML opdracht/: KaggleOpdracht2.ipynb  opdracht 9.2.ipynb  opdracht10.ipynb
Machine_Learning/: opdracht 9.1.ipynb
Neural Network/: KaggleOpdrachtClassificatie.ipynb  KaggleOpdrachtNeuralNetworkRegression.ipynb
Reinforcement_Learning/: game.py  gameFinalBoulder.py  main.py  newVersion.py  reinforcement.py
src/deds_portfolio/: Dbconnection.ipynb  main.py  script.py  settings.py
week 1/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb
week 2/: Dbconnection.ipynb
week 3/: DWHcode.ipynb  deds week 3.ipynb  sqlConnection.ipynb
week2/: Dbconnection.ipynb
wk1.1/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb
