[project]
name = "DEDS_Portfolio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Byrott0", email = "amirsobhan2004@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "ipykernel>=6.29.5", "jupyter>=1.1.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
